--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
             alt="Jovian logo">
     </div>
     <img id="banner" src="banner.jpg" alt="Banner" height="240">
-    <h1>Welcome to Jovian</h1>
+    <h1>About Jovian</h1>
 
     <div id="about">
         <div id="description">
